Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111204

PinchHandler native-gesture scaling is no longer cumulative

XMLWordPrintable

    • Linux/X11, macOS
    • a05cbaaae (dev), 512904abb (6.5)

      Easily visible with a macOS trackpad (or Apple trackpad on Linux X11 with libinput gesture recognition) in the simple use case with a PinchHandler in an Item: it doesn't keep scaling, in fact it's hard to get the size to increase much. It was probably https://codereview.qt-project.org/c/qt/qtdeclarative/+/446412 that caused this regression. And test coverage was insufficient to notice this: the tests only sent single events, not a series of them.

        For Gerrit Dashboard: QTBUG-111204
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            srutledg Shawn Rutledge
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There is 1 open Gerrit change