Fix and test PinchHandler native-gesture scaling

We didn't have test coverage for several gesture events in a row (the
usual case in reality), nor for RotateNativeGesture at all. Amends
a432970b258edb9ff041d221b2155df30cad4799 which incorrectly treated
QNativeGestureEvent::value() as an absolute zoom rather than a delta.

Fixes: QTBUG-111204
Change-Id: Ib95cab5cd3f97229abac1668e59d20ce50d24975
Reviewed-by: Doris Verria <doris.verria@qt.io>
(cherry picked from commit a05cbaaae505dba2546c593e22fe2f9047c0de4b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>